@@ -1,0 +1,2 @@
+[testoptions]
+min_pyver=3.7
